edit swagger doc
